# wiim_api

./: .gitignore  .pre-commit-config.yaml  API_COVERAGE.md  CLI.md  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md
.github/workflows/: ci.yml
docs/integrations/: i3blocks.md  polybar.md  waybar.md
docs/templates/: README.md  audio-quality.md  examples.md  variables.md
examples/: TEMPLATE_USAGE.md  basic_usage.rs  multiple_approaches.rs  template_config.toml  template_example.rs  test_controls.rs  test_device.rs  test_metadata.rs  test_performance.rs  test_volume_performance.rs  waybar_config.json
src/: lib.rs
tests/: device_integration.rs  performance_integration.rs
